# fractal-painter

./: .gitignore  Mandelbrot.hs  Plot.hs  README.md  fractal-painter.cabal  main.hs
app/: Main.hs
docs/: Main.html  Mandelbrot.html  Plot.html  doc-index.html  index-frames.html  index.html  mini_Main.html  mini_Mandelbrot.html  mini_Plot.html
