name:                fractal-painter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jsamol/fractal-painter#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Pustelnik, Julia Samól
maintainer:          pustelni@student.agh.edu.pl samol@student.agh.edu.pl
copyright:           2017 Sebastian Pustelnik, Julia Samól
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mandelbrot
                     , Plot
  build-depends:       base >= 4.7 && < 5
                     , gd >= 3000.1.0
                     , HUnit
                     , QuickCheck
  default-language:    Haskell2010

executable fractal-painter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fractal-painter
                     , gd >= 3000.1.0
                     , HUnit
                     , QuickCheck
  default-language:    Haskell2010

test-suite fractal-painter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fractal-painter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsamol/fractal-painter
